package it.polimi.ingsw.model.card;

/**
 * This enum serves to distinguish the different sides of a card.
 */
public enum CardOrientation {
    FRONT ,
    BACK;
}
