package it.polimi.ingsw.model.card;

/**
 * This class represents the contents visible on the angles and center of the Cards
 */
public enum Symbol {
    PLANT,
    ANIMAL,
    INSECT,
    FUNGI,
    QUILL,
    INKWELL,
    MANUSCRIPT,
    /**
     * No content is visible
     */
    BLANK,
    /**
     * Hidden content (for angles only)
     */
    HIDDEN
}
